--- a/Table_Construction.ipynb
+++ b/Table_Construction.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "                    2       10    20.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr>\\n      <th>Exercise</th>\\n      <th colspan=\"5\" halign=\"left\">Pull Up</th>\\n    </tr>\\n    <tr>\\n      <th>Date</th>\\n      <th colspan=\"2\" halign=\"left\">2018-09-09</th>\\n      <th colspan=\"3\" halign=\"left\">2018-10-09</th>\\n    </tr>\\n    <tr>\\n      <th>Sets</th>\\n      <th>1</th>\\n      <th>2</th>\\n      <th>1</th>\\n      <th>2</th>\\n      <th>3</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Reps</th>\\n      <td>12.0</td>\\n      <td>10.0</td>\\n      <td>12.0</td>\\n      <td>10.0</td>\\n      <td>9.0</td>\\n    </tr>\\n    <tr>\\n      <th>Weight</th>\\n      <td>20.0</td>\\n      <td>20.0</td>\\n      <td>20.0</td>\\n      <td>20.0</td>\\n      <td>20.0</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr>\\n      <th>Exercise</th>\\n      <th colspan=\"2\" halign=\"left\">Push Up</th>\\n      <th colspan=\"3\" halign=\"left\">Dip</th>\\n    </tr>\\n    <tr>\\n      <th>Date</th>\\n      <th colspan=\"2\" halign=\"left\">2018-10-09</th>\\n      <th colspan=\"3\" halign=\"left\">2018-11-09</th>\\n    </tr>\\n    <tr>\\n      <th>Sets</th>\\n      <th>1</th>\\n      <th>2</th>\\n      <th>1</th>\\n      <th>2</th>\\n      <th>3</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Reps</th>\\n      <td>50</td>\\n      <td>40</td>\\n      <td>15</td>\\n      <td>14</td>\\n      <td>12</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,8 @@
     "    return big_table.to_html()\n",
     "\n",
     "qs = ExerciseInstance.objects.filter(exercise__name='Pull Up')\n",
-    "#qs = ExerciseInstance.objects.filter(date=datetime.date(2018, 10, 9))\n",
+    "qs = ExerciseInstance.objects.filter(date=datetime.date(2018, 10, 9))\n",
+    "qs = ExerciseInstance.objects.filter(exercise__classification__name='Push')\n",
     "\n",
     "exercise_instance_table(qs)"
    ]
